# wgpu-bug-crash-on-resize

./: Cargo.toml
src/: main.rs
trace/: trace-dx11.ron  trace-dx12.ron  trace-vk.ron
